RESOLVED FIXED135151
Web Inspector: Fix unused parameter build warning
https://bugs.webkit.org/show_bug.cgi?id=135151
Summary Web Inspector: Fix unused parameter build warning
Shivakumar J M
Reported 2014-07-21 23:56:09 PDT
Fix unused parameter build warning, found in WebInspector.cpp, during build for efl wk2 port. [ 93%] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebPage/WebPageGroupProxy.cpp.o /home/shiva.jm/webkit-git/svn32bit/WebKit/Source/WebKit2/WebProcess/WebPage/WebInspector.cpp:278:6: warning: unused parameter ‘enabled’ [-Wunused-parameter] void WebInspector::setJavaScriptProfilingEnabled(bool enabled)
Attachments
patch (1.24 KB, patch)
2014-07-22 01:52 PDT, Shivakumar J M
no flags
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 (522.43 KB, application/zip)
2014-07-22 08:00 PDT, Build Bot
no flags
Radar WebKit Bug Importer
Comment 1 2014-07-21 23:56:38 PDT
Shivakumar J M
Comment 2 2014-07-22 01:52:41 PDT
Created attachment 235276 [details] patch Fix unused parameter build warning by removing the parameter name
Build Bot
Comment 3 2014-07-22 08:00:45 PDT
Comment on attachment 235276 [details] patch Attachment 235276 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/4759925733457920 New failing tests: media/W3C/video/networkState/networkState_during_loadstart.html
Build Bot
Comment 4 2014-07-22 08:00:50 PDT
Created attachment 235291 [details] Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Joseph Pecoraro
Comment 5 2014-07-22 10:42:36 PDT
Comment on attachment 235276 [details] patch r=me
WebKit Commit Bot
Comment 6 2014-07-22 11:14:05 PDT
Comment on attachment 235276 [details] patch Clearing flags on attachment: 235276 Committed r171349: <http://trac.webkit.org/changeset/171349>
WebKit Commit Bot
Comment 7 2014-07-22 11:14:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.