Web Inspector: Fix unused parameter build warning https://bugs.webkit.org/show_bug.cgi?id=135151

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-07-22
Reviewed by Joseph Pecoraro.

Fix unused parameter build warning by removing the parameter name

* WebProcess/WebPage/WebInspector.cpp:
(WebKit::WebInspector::setJavaScriptProfilingEnabled):

Canonical link: https://commits.webkit.org/153064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171349 268f45cc-cd09-0410-ab3c-d52691b4dbfc